--- a/varmaprofile.html
+++ b/varmaprofile.html
@@ -67,6 +67,6 @@
 </table>
 </table>
 <hr>
-<a href="file:///C:/Users/Varma/OneDrive/Desktop/SUCCESSFULL%20PROJECTS/varmacontactdetails.html" target="blank">contact details</a>
+<a href="file:///C:/Users/Varma/OneDrive/Desktop/SUCCESSFULL%20PROJECTS/varmacontactdetails.html">contact details</a>
 </body>
 </html>
